[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game/Assets/Visuals/Shaders/dissolve.material" type="Material" id=1]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/bump.ogg" type="AudioStream" id=2]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_footstep2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Game/Assets/Visuals/Scavengers_SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_footstep1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_enemy1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Game/Characters/Enemy1/Enemy1.gd" type="Script" id=7]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/wueh.ogg" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 42, 43, 6, 8 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("NormalPitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.00865849,
"start_offset": 0.0,
"stream": ExtResource( 6 )
}, {
"end_offset": 0.00732641,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=2]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 11, 7, 9 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("NormalPitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlowPitch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:dissolving")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:dissolve_amount")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.75 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 2 ), Vector2( 5, -2 ), Vector2( -5, 0 ), Vector2( 5, 2 ), Vector2( -5, -2 ), Vector2( 5, 0 ), Vector2( -5, 2 ), Vector2( 5, -2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/Sprite:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.372549, 0.729412, 0.372549, 0.807843 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Pivot/Sprite:material")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("SlowPitch")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("NormalPitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.75, 0.85, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 10, 8, 9, 8, 9, 10 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("NormalPitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.2 )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlowPitch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 1.15 )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("SlowPitch")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle", {
"Grunt1": 1,
"Grunt2": 2,
"Silence": 3
} ],
"method": "choose_sound"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:dissolve")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:dissolve_amount")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Sprite:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.22, 0.33, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 8, 10, 9 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("NormalPitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [ {
"end_offset": 0.324887,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.02 )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("NormalPitch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"clips": [ {
"end_offset": 0.488685,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.02 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "walk", {
"Step1": 1
} ],
"method": "choose_sound"
} ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 16 )

[node name="Enemy1" type="Node2D" groups=[
"actors",
]]
visible = false
light_mask = 2
position = Vector2( 16, 16 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
obj_type = 0
dir = 3
down_frame = 9
up_frame = 9
right_frame = 9
left_frame = 9
walk_up_anim = "walk"
walk_down_anim = "walk"
walk_right_anim = "walk"
walk_left_anim = "walk"
onLeftFlip = 0
onRightFlip = 1
onUpFlip = 1
onIdleFlip = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/Killed = SubResource( 3 )
anims/bump = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/init = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="Pivot" type="Position2D" parent="."]
light_mask = 0

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
enabled = true
collision_mask = 3

[node name="KinematicBody2D" type="KinematicBody2D" parent="Pivot"]
light_mask = 0
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/KinematicBody2D"]
light_mask = 0
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Pivot"]
self_modulate = Color( 0.916747, 0.923636, 0.916509, 0.982531 )
light_mask = 2
material = ExtResource( 1 )
position = Vector2( -5, 2 )
texture = ExtResource( 4 )
vframes = 10
hframes = 8
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerCamera" type="Camera2D" parent="Pivot"]
visible = false
zoom = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="FrontEffects" type="Node2D" parent="."]
light_mask = 3

[node name="SlowPitch" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
pitch_scale = 0.8
area_mask = 63

[node name="NormalPitch" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
area_mask = 15
